@@ -1040,6 +1040,9 @@ as.tags.html_dependency <- function(x, ...) {
 #'
 #' @param x A character vector of HTML to be preserved.
 #'
+#' @param raw Preserve HTML using Pandoc `raw_attribute`
+#'  (https://pandoc.org/MANUAL.html#extension-raw_attribute)
+#'
 #' @return \code{htmlPreserve} returns a single-element character vector with
 #'   "magic" HTML comments surrounding the original text (unless the original
 #'   text was empty, in which case an empty string is returned).
@@ -1060,10 +1063,20 @@ as.tags.html_dependency <- function(x, ...) {
 #' output
 #'
 #' @export
-htmlPreserve <- function(x) {
+htmlPreserve <- function(x, raw = getOption("htmltools.preserve.raw", FALSE)) {
   x <- paste(x, collapse = "\n")
   if (nzchar(x))
-    sprintf("<!--html_preserve-->%s<!--/html_preserve-->", x)
+    if (raw) {
+      # use fenced code block if there are embedded newlines
+      if (grepl("\n", x, fixed = TRUE))
+        sprintf("\n```{=html}\n%s\n```\n", x)
+      # otherwise use inline span
+      else
+        sprintf("`%s`{=html}", x)
+    }
+    else {
+      sprintf("<!--html_preserve-->%s<!--/html_preserve-->", x)
+    }
   else
     x
 }
